modified:   main.pdf 	modified:   main.tex 	modified:   main.toc

--- a/main.tex
+++ b/main.tex
@@ -228,7 +228,7 @@ Bluetooth Low Energy (BLE) — низкоэнергетичная радиоте
   \item \textbf{Peripheral} — Энергоэффективное устройство, периодически транслирующее (advertise) данные и ждущее подключения от центрального узла (Central) \ref{fig:fig_BLE_topology_unicast}. Характерные примеры: пульсометры, датчики температуры, трекеры активности.
   \item \textbf{Central} — Стационарное устройство, выполняющее сканирование эфирных пакетов и устанавливающее соединения с одним или несколькими периферийными узлами. Часто это смартфоны, планшеты или концентраторы IoT--сетей, которым нужны данные от множества сенсоров.
   \item \textbf{Broadcaster} — Устройство с односторонней рекламой: без установления соединения периодически рассылает рекламные пакеты с полезной информацией (beacons) \ref{fig:fig_BLE_topology_broadcast}. Используется для вещания маячков близости, рекламных кампаний, навигации в помещениях (Indoor positioning system).
-  \item \textbf{Observer} — Стационарное устройство‑приёмник, которое пассивно сканирует эфир, собирая (несвязанную) информацию из рекламных пакетов Broadcaster’ов и Peripheral’ов. Применяется для мониторинга окружающей среды, подсчёта посетителей, сбора статистики о маячках.
+  \item \textbf{Observer} — Стационарное устройство-приёмник, которое пассивно сканирует эфир, собирая (несвязанную) информацию из рекламных пакетов Broadcaster’ов и Peripheral’ов. Применяется для мониторинга окружающей среды, подсчёта посетителей, сбора статистики о маячках.
 \end{itemize}
 
 
@@ -262,7 +262,9 @@ BLE широко используется в умных домах, торгов
 
 \paragraph{BLE Mesh.}
 
-Т.к. BLE Mesh лишь расширение стандарта, использующий особым образом режим рекламы для лавинообразного передачи сообщений, по техническим характеристикам он сильно похож на BLE. Для поддержания совместимости было использовано лавинообразное рассылка (flooding \cite{BLE_mesh_spec}), которая с большим количеством устройств может значительно увеличить территорию покрытия, но, с другой стороны, может привести к избыточной загруженности каналов, что после некоторой отметки в количестве устройств может привести к потерям пакетов.
+Т.к. BLE Mesh лишь расширение стандарта, использующий особым образом режим рекламы для лавинообразного передачи сообщений, по техническим характеристикам он сильно похож на BLE.
+Для поддержания совместимости было использовано лавинообразное рассылка (flooding \cite{BLE_mesh_spec}), которая с большим количеством устройств может значительно увеличить территорию
+покрытия, но, с другой стороны, может привести к избыточной загруженности каналов, что после некоторой отметки в количестве устройств может привести к потерям пакетов.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                                                                                                                           %
@@ -275,7 +277,6 @@ BLE широко используется в умных домах, торгов
 Стандарт ZigBee основан на IEEE~802.15.4 и работает в нелицензируемых ISM-диапазонах \cite{IEEE802_15_4_2020,ZIGBEE_SPEC_R23}: 2.4ГГц(глобально доступен и используется во всем мире), 915МГц (США, Канада, Австралия и Израиль).  868МГц (ЕC, Великобритания, Турция)
 
 Области применения включают умные дома и городскую инфраструктуру, где используются системы управления освещением, датчики движения, решения для безопасности и “умные” счётчики в составе городских систем управления; промышленную автоматизацию с круглосуточным мониторингом состояния оборудования, предиктивным обслуживанием, сбором данных с вибрационных и температурных датчиков, дистанционным управлением приводами и оптимизацией технологических процессов; и медицинский мониторинг для удалённого сбора жизненных показателей пациентов и контроля заряда портативных медицинских устройств.
-
 
 \paragraph{Основные элементы архитектуры и топологии}
 \begin{itemize}
@@ -292,7 +293,6 @@ BLE широко используется в умных домах, торгов
       \item \emph{ячеистая топология (Mesh-network)} Любой маршрутизатор может ретранслировать пакет между любыми двумя узлами. Поддерживает самовосстановление при отказах и динамическое подключение новых устройств.
     \end{itemize}
 \end{itemize}
-
 
 Координатор задаётся программно администратором, но при запуске сети он автоматически:
 \begin{itemize}
@@ -369,38 +369,56 @@ Zigbee Pro представляет собой расширенную реали
 \end{figure}
 
 
-Wi-Fi Mesh (IEEE 802.11s) и BLE Mesh работают полностью без единого сетевого координатора: в Wi-Fi Mesh каждый узел (Mesh Point) самостоятельно участвует в маршрутизации
-по протоколу HWMP, а BLE Mesh применяет управляемое наводнение без роли координатора доставки. Zigbee же требует наличия PAN Coordinator’а, который создаёт и управляет
-сетью, выдавая адреса устройствам-роутерам. Z-Wave полагается на Primary Controller (и Static Update Controller) для добавления узлов и хранения
-топологии, без которого сама сеть не синхронизируется. Thread формально выбирает «лидера», но все Router-узлы равноправны: нет жёсткого единственного
-координатора, а маршруты поддерживаются децентрализованно через MLE-сообщения. При этом большинство протоколов (Wi-Fi Mesh, BLE Mesh, Zigbee, Thread) работают в перенаселённой
-полосе 2.4 GHz – зона 2.4 GHz страдает высоким уровнем помех и зашумлённостью каналов, тогда как Z-Wave (868/915 MHz) избегает этой проблемы.
+\paragraph{Wi-Fi}
+Подходит, если устройства питаются от сети и требуют периодической двусторонней связи (настройка, диагностика), но энергопотребление высоко, а при отказе единственного роутера все «умные» приборы теряют соединение. Отсутствие готовых профилей усложняет быструю интеграцию простых сенсоров и актюаторов в экосистему без дополнительной логики на каждом устройстве.
 
-Для построения распределенной самовосстанавливающейся сети без единой точки отказа и с наименьшей задержкой, лучше выбирать Wi-Fi Mesh или BLE Mesh, хотя они не лишены
-компромисов: нуждаются в широкой полосе и часто сталкиваются с помехами на частоте 2.4ГГц. Для снижения влияния радио-шумов 2.4ГГц и повышения надёжности на больших
-расстояниях предпочтительнее Z-Wave на суб-ГГц, пусть и с центральным контроллером.
+\paragraph{Wi-Fi HaLow (802.11ah)}
+Дает радиус работы в несколько сотен метров и низкое энергопотребление благодаря планируемым «пробуждениям», но требует специализированных модулей и ручной реализации логики таймингов и ретрансляции. Полезен для удалённых уличных датчиков, но не для систем автоматизации помещений.
+
+\paragraph{BLE}
+Идеален для маленьких беспроводных сенсоров: потребляет микроватты в спящем режиме, а «из коробки» доступно множество стандартизованных GATT-профилей (кнопки, переключатели, датчики температуры), что ускоряет выпуск простых устройств. Единственная точка сбора (смартфон или хаб) — SPOF, что незначительно при подключению к смартфону или ПК, но становится уязвимым местом при построении системы с большим количеством устройств.
+
+\paragraph{BLE Mesh}
+Устраняет SPOF за счёт децентрализованного flooding-ретранслятора, повышая надёжность покрытия, но сложность прошивки растёт: нужно описывать модели сообщений и управлять подписками, и батарейные устройства-ретрансляторы разряжаются быстрее.
+Bluetooth Mesh не использует центрального координатора и строит сеть поверх классического BLE через управляемое «затопление» (managed flooding), что обеспечивает высокую отказоустойчивость и самовосстановление при выходе узлов из строя. В то же время это ведёт к повышенной сложности разработки (необходимость профилирования, управления ключами, времени-проживания сообщений и т. д.) и к компромиссам по энергоэффективности, решаемым с помощью ролей «низкоэнергетический узел»/«друг» (Low Power Node / Friend)
+
+\paragraph{Zigbee}
+Низкое энергопотребление и простая интеграция типовых устройств через ZCL-профилей (лампы, выключатели, датчики) делают его популярным в массовых установках. Однако жёстко централизованный PAN-Coordinator без автоматического резервирования превращает отключение хаба в полный отказ сети.
+
+\paragraph{Zigbee Pro}
+Добавляет самовосстановление mesh-маршрутов и резервирование Trust Center, что существенно повышает отказоустойчивость, сохраняя энергоэффективность и привычную модель ZCL-профилей. Разработка сложных нетиповых устройств усложняется из-за множества дополнительных опций маршрутизации и безопасности.
+
+\paragraph{Thread}
+Строит настоящий IPv6-mesh с динамическим лидером, без единой точки отказа, и самовосстанавливается через RPL. Отличается отличной надёжностью и низким потреблением сенсоров, но не предлагает «готовых» шаблонов устройств — для ламп и датчиков придётся проектировать обмен и структуру данных самостоятельно. Имеет высокий порог входа ввизу малой распространенности устройств для разработки (Dev-Kit).
+
 
 \begin{table}[h!]
     \centering
     \renewcommand{\arraystretch}{1.3}
-    \begin{tabularx}{\textwidth}{|l|X|X|X|X|}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
         \hline
-        \textbf{Имя} & \textbf{Пропускная способность} & \textbf{Дальность} & \textbf{Энергопотребление} & \textbf{Протокол маршрутизации} \\
+        \textbf{Имя} & \textbf{Пропускная способность} & \textbf{Дальность} & \textbf{Протокол маршрутизации} \\
         \hline
-        WiFi Mesh & до 1,300 Мбит/с & до 100 м в помещении и до 300 м на открытом пространстве & от нескольких мВт до нескольких сотен мВт & HWMP с возможностью изменения \\
+        Wi-Fi & до 23 Гбит/с & до 70 м в помещении и до 140 м на открытом местности & IEEE 802.11s (HWMP) \\
         \hline
-        BLE Mesh & до 125 Кбит/с & до 100 м в помещении и до 300 м на открытой местности & от нескольких мкВт до нескольких мВт & Flooding \\
+        Wi-Fi HaLow & 150 Кбит/с – 347 Мбит/с & до 200 м в помещении и до 1 км на открытом местности & IEEE 802.11s (HWMP) \\
         \hline
-        Z-wave & до 100 Кбит/с & до 100 м в помещении и до 300 м на открытой местности & от нескольких мкВт до нескольких мВт & Закрытый протокол \\
+        BLE Mesh & до 125 Кбит/с & до 100 м в помещении и до 300 м на открытой местности & Flooding \\
         \hline
-        Zigbee & от 20 до 250 Кбит/с & от 10 до 100 м в помещении и до 400 м на открытом пространстве & от нескольких мкВт до нескольких мВт & AODV с возможностью изменения \\
+        BLE Mesh & до 2 Мбит/с & до 400 м & managed flooding \\
+        \hline
+        Zigbee & до 250 Кбит/с & 10-100 м в помещении и 100–300 м на открытом местности & AODV (изменяемо) \\
+        \hline
+        Zigbee Pro & до 250 Кбит/с & 10–100 м в помещении и 100–300 м на открытом местности & AODV (изменяемо) \\
+        \hline
+        Thread & до 250 Кбит/с & 10–100 м в помещении и 100–300 м на открытом местности & MLE + distance-vector (RIPng) \\
         \hline
     \end{tabularx}
-    \caption{Сравнение беспроводных mesh-технологий}
+    \caption{Сравнительная таблица параметров беспроводных сетей}
     \label{table:compare_wireless_protocols}
 \end{table}
 
-\subsubsection{Доступность для разработчиков платформ, поддерживающих представленные протоколы}
+\subsubsection{Доступность платформ для разработки}
 
 В среде Arduino IDE наиболее зрелая поддержка реализована для плат серии ESP32 DevKitC на базе модуля ESP-WROOM-32: доступен API для построения Wi-Fi Mesh,
 однако готовых примеров в составе «arduino-esp32» нет, а поддержка BLE Mesh на уровне Arduino отсутствует, требуя прямой работы с ESP-IDF. Платы ESP32-C6 и
@@ -618,7 +636,9 @@ K, перестанут обрабатываться межзонные собы
 
 \bibitem{Fault_Tolerance_ZigBee} Richard Alena, Ray Gilstrap, Jarren Baldwin, Thom Stone, Pete Wilson. Fault Tolerance in ZigBee Wireless Sensor Networks // NASA Ames Research Center, Moffett Field [Электронный ресурс]: \url{URL: https://ntrs.nasa.gov/api/citations/20110012426/downloads/20110012426.pdf?utm_source=chatgpt.com} (дата обращения: 20.05.2025).
 
-\bibitem{ZCL_SPEC} ZigBee Cluster Library Specification (07-5123-08), Connectivity Standards Alliance [Электронный ресурс]: \url{https://zigbeealliance.org/wp-content/uploads/2021/10/07-5123-08-Zigbee-Cluster-Library.pdf} (дата обращения: 20.05.2025).
+%\bibitem{ZigBee_test} Ferrari, Gianluigi & Medagliani, Paolo & Piazza, S. & Martalo, Marco. Wireless Sensor Networks: Performance Analysis in Indoor Scenarios. EURASIP Journal on Wireless Communications and Networking. 2007.
+
+%\bibitem{ZCL_SPEC} ZigBee Cluster Library Specification (07-5123-08), Connectivity Standards Alliance [Электронный ресурс]: \url{https://zigbeealliance.org/wp-content/uploads/2021/10/07-5123-08-Zigbee-Cluster-Library.pdf} (дата обращения: 20.05.2025).
 
 \bibitem{NXP_JNUG3101} Zigbee Pro Stack User Guide (JN-UG-3101), NXP Semiconductors [Электронный ресурс]: \url{https://www.nxp.com/docs/en/user-guide/JN-UG-3101.pdf} (дата обращения: 20.05.2025).
 
