modified:   main.pdf 	modified:   main.tex 	modified:   main.toc

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-%\documentclass{article}
 \documentclass[a4paper,12pt]{article}
 \usepackage[12pt]{extsizes}
 \usepackage[T2A]{fontenc}
@@ -124,7 +123,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 
 \newpage
 
-\section{Глава 1}
+\section{Глава 1. Топологии сетей и протоколы беспроводных сетей}
 
 \subsection{Топологии беспроводных сетей}
 Все перечисленные беспроводные сети работают в одном или нескольких вариантах
@@ -313,7 +312,7 @@ BLE широко используется в умных домах, торгов
 
 
 \paragraph{Шаблоны устройств (Application Profiles)}
-На уровне приложения Zigbee определяет профили устройств:
+На уровне приложения Zigbee определяет профили устройств, что можнно наблюдать на рисунке \ref{fig:Zigbee_device_profile}:
 \begin{itemize}
  \item \textbf{Публичные профили:} Home Automation, Commercial Building Automation и др.: лампы, выключатели, датчики, термостаты, розетки.
  \item \textbf{Частные профили:} Производители могут создавать собственные профили, но контроллер должен поддерживать их для взаимодействия.
@@ -326,7 +325,7 @@ BLE широко используется в умных домах, торгов
     \centering
     \includegraphics[width=0.8\textwidth]{images/Zigbee_device_profile.jpg}
     \caption{Профили устройств Zigbee \cite{IMG_Zigbee_profile}}
-    \label{fig:cloud_event_processing}
+    \label{fig:Zigbee_device_profile}
 \end{figure}
 
 \paragraph{Влияние отказов}
@@ -435,21 +434,41 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                                                                                                                           %
-%                                                       ГЛАВА I. Топологии сетей и протоколы беспроводных сетей                                                             %
+%                                                                   ГЛАВА II. Общее описание системы                                                                        %
 %                                                                                                                                                                           %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\section{Глава 2}
+\section{Глава 2. Общее описание системы}
 
-\subsection{Описание системы}
-Централизованные СДА, имеющие ЦУД, обладая несомненными преимуществами, такими как простота настройки и реализации,
-также имеют ряд недостатков: низкая скорость реакции, невысокая надежность и безопасность, сильно зависящая от ЦУД
-и облачной инфраструктуры. Для интеграции устройств, находящихся в разных сетях, используется централизованная
-координация через единое облако. На рис.~\ref{fig:GlobalSystemDesing} представлена архитектура предлагаемой гибридной системы, подразумевающей
-прямое взаимодействие устройств в СДА.
+\subsection{Проблемы, решаемые предлагаемой системой}
+
+Система домашней автоматизации, осуществляющие обработку сценариев при помощи облачных сервисов либо с помощью центра умного дома, обладай несомненными преимуществами, такими как
+простота настройки и реализации также имеют ряд недостатков.
+\begin{enumerate}
+\item \textbf{Высокая задержка:} Cобытие, поступающее от сенсора должно пройти длинный путь от устройства инициатора к центру умного
+дома, пройти обработку и быть передано в виде команды устройству актуатору. Использование шаблонов устройств позволяет упростить взаимодействие сенсоров и актуаторов в системе, так,
+например, системы использующие ZigBee могут устанавливать соединение напрямую между некоторыми устройствами используя технологию binding \cite{ZIGBEE_SPEC_R23}. Такой подход может существенно
+снизить нагрузку на координатор сети и ретрансляторы, но не решает проблему сложных взаимодействий. Также данный метод предполагает использование однотипных шаблонов из-за чего
+устройство разных производителей зачастую всё-таки будут взаимодействовать через центр умного дома.
+\item \textbf{Отказоустойчивость:} Использование центра умного дома либо облачные инфраструктуры для обработки сценариев потенциально снижает надёжность системы: отказ
+централизованного обработчика парализует работу СДА. Использование кадров маяка для синхронизации также вностит ограничение на отказоустойчивость системы: выход из строя координатора,
+задающего синхронизационный фрейм также парализует СДА.
+\end{enumerate}
+
+\subsection{Предлагаемые нововведения}
+
+Предлагаемый набор нововведений, позволяющих решить список потенциальных проблем:
+\begin{enumerate}
+\item Перенос обработки логики событий из центра умного дома (или облачного сервиса) в устройства-актуаторы.
+\item Для взаимодействия устройств предлагается использование паттерна <<наблюдатель>> (Subject-Observer).
+\item Для объединения устройств из разных локаций в единую сеть предлагается использование распределённого отказаустойчивого кластера, выполняющего
+функции моста (ретрансляция сообщений внутри сети) и координатора сети (настройки системы, добавление и удаление устройств) и позволяющего удаленно управлять и отслеживать состояние
+умного дома. Предполагается использование минимум одного узла кластера в каждой локации. На рис.~\ref{fig:GlobalSystemDesing} представлена архитектура предлагаемой гибридной системы.
+\item С целью повышения отказоустойчивости предлагается использование CSMA \cite{CSMA_article} для предотвращения коллизии сообщений и отказа от фрейма синхронизации.
+\end{enumerate}
 
 
 \begin{figure}[h]
@@ -459,12 +478,35 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
     \label{fig:GlobalSystemDesing}
 \end{figure}
 
-Для взаимодействия физически разнесенных устройств предлагается использование
-шлюзов-ретрансляторов, которые выполняют функцию объединения зон в единую сеть,
-распределяют по устройствам обновленную конфигурацию сети, а также предоставляют функцию управления умным домом извне.
-Предложенная система уменьшает количество промежуточных узлов между устройством, порождающим событие, и устройством
-исполнителем (при нахождении устройств в одной зоне до нуля). Данное решение кроме повышения надежности системы также
-уменьшает задержку передачи информации, повышает отказоустойчивость системы и ее безопасность \cite{SecuritySmartHome, SecuritySmartHome2}.
+\subsection{Обоснование нововведений}
+
+Данный подход позволит снизить задержки, так как вдвое сокращается количество передаваемых сообщений в режиме one-to-one и в n раз в случае передачи сообщений one-to-many. Также
+снижение задержек происходит в виду отсутствие необходимости поочередной передачи команд каждому устройству, если событие подразумевает одновременное взаимодействие нескольких
+устройств, например, по нажатию выключателя включение группы ламп. Данное решение также повышает отказоустойчивость сети из-за отсутствия промежуточных узлов: надёжность системы
+зависит только от надёжности устройства-сенсора и устройства-актуатора, а в случае использования межзональных сценариев также от узлов кластера из этих локаций.
+
+Использование CSMA хоть и приводит к чуть большему потреблению стационарных устройств, но позволяет отказаться от генератора синхронизирующих фреймов, которым обычно выступает
+координатор сети. В таком случае выход из строя координатора либо его отключение ограничиться только невозможностью удалять добавлять и переконфигурировать сеть но не скажется на работоспособности сети
+
+%Централизованные СДА, имеющие ЦУД, обладая несомненными преимуществами, такими как простота настройки и реализации,
+%также имеют ряд недостатков: низкая скорость реакции, невысокая надежность и безопасность, сильно зависящая от ЦУД
+%и облачной инфраструктуры. Для интеграции устройств, находящихся в разных сетях, используется централизованная
+%координация через единое облако. На рис.~\ref{fig:GlobalSystemDesing} представлена архитектура предлагаемой гибридной системы, подразумевающей
+%прямое взаимодействие устройств в СДА.
+
+
+
+%Для взаимодействия физически разнесенных устройств предлагается использование
+%шлюзов-ретрансляторов, которые выполняют функцию объединения зон в единую сеть,
+%распределяют по устройствам обновленную конфигурацию сети, а также предоставляют функцию управления умным домом извне.
+%Предложенная система уменьшает количество промежуточных узлов между устройством, порождающим событие, и устройством
+%исполнителем (при нахождении устройств в одной зоне до нуля).
+Данное решение кроме повышения надежности системы также уменьшает задержку передачи информации, повышает отказоустойчивость системы и ее безопасность \cite{SecuritySmartHome, SecuritySmartHome2}.
+
+
+\section{Глава 3. Архитектура конечных устройств.}
+
+
 
 \begin{figure}[H]
     \centering
@@ -632,7 +674,7 @@ K, перестанут обрабатываться межзонные собы
 %Zigbee & Zigbee Pro
 \bibitem{ZIGBEE_SPEC_R23} Zigbee Specification Revision 23 [Электронный ресурс]: \url{https://csa-iot.org/wp-content/uploads/2023/04/05-3474-23-csg-zigbee-specification-compressed.pdf} (дата обращения: 20.05.2025).
 
-\bibitem{IEEE802_15_4_2020} IEEE Std 802.15.4-2020: IEEE Standard for Low-Rate Wireless Personal Area Networks (LR-WPANs) [Электронный ресурс]: \url{https://standards.ieee.org/standard/802_15_4-2020.html} (дата обращения: 20.05.2025).
+\bibitem{IEEE802_15_4_2020} IEEE Std 802.15.4-2020: IEEE Standard for Low-Rate Wireless Personal Area Networks (LR-WPANs) [Электронный ресурс]: \url{URL: https://standards.ieee.org/standard/802_15_4-2020.html} (дата обращения: 20.05.2025).
 
 \bibitem{Fault_Tolerance_ZigBee} Richard Alena, Ray Gilstrap, Jarren Baldwin, Thom Stone, Pete Wilson. Fault Tolerance in ZigBee Wireless Sensor Networks // NASA Ames Research Center, Moffett Field [Электронный ресурс]: \url{URL: https://ntrs.nasa.gov/api/citations/20110012426/downloads/20110012426.pdf?utm_source=chatgpt.com} (дата обращения: 20.05.2025).
 
@@ -640,7 +682,9 @@ K, перестанут обрабатываться межзонные собы
 
 %\bibitem{ZCL_SPEC} ZigBee Cluster Library Specification (07-5123-08), Connectivity Standards Alliance [Электронный ресурс]: \url{https://zigbeealliance.org/wp-content/uploads/2021/10/07-5123-08-Zigbee-Cluster-Library.pdf} (дата обращения: 20.05.2025).
 
-\bibitem{NXP_JNUG3101} Zigbee Pro Stack User Guide (JN-UG-3101), NXP Semiconductors [Электронный ресурс]: \url{https://www.nxp.com/docs/en/user-guide/JN-UG-3101.pdf} (дата обращения: 20.05.2025).
+\bibitem{NXP_JNUG3101} Zigbee Pro Stack User Guide (JN-UG-3101), NXP Semiconductors [Электронный ресурс]: \url{URL: https://www.nxp.com/docs/en/user-guide/JN-UG-3101.pdf} (дата обращения: 20.05.2025).
+
+\bibitem{CSMA_article} Simon S. Lam, A Carrier Sense Multiple Access Protocol for Local Networks // Computer Networks. 1976. Vol.~4 Issue~1 P.~21--32,
 
 %images
 \bibitem{IMG_protocol_compare} Сравнительный анализ стандартов связи для сетей IoT [Электронный ресурс]: \url{URL: https://habr.com/ru/companies/msw/articles/720518/} (дата обращения: 11.05.2025).
